Mejoras en el reproductor

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="info">
                 <div class="name">
-                    <h2>Album Rock</h2>
+                    <h2 id="nombre">Album</h2>
                     <h4>track 01 - Song Rock</h4>
                 </div>
                 <div class="start">
@@ -35,7 +35,6 @@
             </div>
         </article>
     </div>
-
 
     <script src="main.js"></script>
 </body>
